todo-list edit remaining

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         </header>
 
         <div class="lecture">
+            <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+            <script src="./index.js"></script>
+
+
             <form class="lecture-add" id="lecture-add">
                 <div class="row mb-2">
                     <div class="col-md-6">
@@ -53,7 +57,7 @@
             </form>
             <div id="lecture-list">
                 <ul>
-                    <li>
+                    <!-- <li>
                         <div>
                             <h6 class="title completed ">Complete assignment 1 (HTML / CSS) <span class="ml-2 badge badge-danger">High</span> </h6>
                             <p class="description">Description of your task goes here </p>
@@ -102,7 +106,7 @@
                             <button class="btn btn-warning"><i class="fas fa-pencil"></i></i></button>
                             <button class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
                         </div>
-                    </li>
+                    </li> -->
 
                 </ul>
             </div>
